deployments/jellyfin-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-proxy-service
  namespace: jellyfin-proxy
spec:
  selector:
    app: jellyfin-proxy
  ports:
  - name: web
    port: 80
    targetPort: 80
